books/Programming Interview/Java/CH10 자바 가상머신 이해하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
+++ b/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
@@ -1,9 +1,10 @@
 # JVM 이해하기
 
 JVM은 프로그램이 실행되는 플랫폼이다. 
+각 운영체제와 아키텍처용으로 만들어져 있고 운영체제와 애플리케이션 사이에 위치하면서 ㅐ
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NjIwMjQ2NjldfQ==
+eyJoaXN0b3J5IjpbMzgzNjA4NTA2XX0=
 -->
