--- a/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
+++ b/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
@@ -1,10 +1,17 @@
 # JVM 이해하기
 
 JVM은 프로그램이 실행되는 플랫폼이다. 
-각 운영체제와 아키텍처용으로 만들어져 있고 운영체제와 애플리케이션 사이에 위치하면서 ㅐ
+각 운영체제와 아키텍처용으로 만들어져 있고 운영체제와 애플리케이션 사이에 위치하면서 애플리케이션이 플랫폼에 상관없이 독립적으로 실행되도록 한다. 
+
+
+## GC(Garbage Collection)
+
+> 메모리는 어떻게 할당하는가?
+
+new 키워드는 자바 heap영역에 메모리를 할당한다. 힙은 애플리케이션 영역에 접근할 수 있는 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzgzNjA4NTA2XX0=
+eyJoaXN0b3J5IjpbMTM2NDg5MDQ1M119
 -->
