--- a/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
+++ b/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
@@ -8,10 +8,10 @@ JVM은 프로그램이 실행되는 플랫폼이다.
 
 > 메모리는 어떻게 할당하는가?
 
-new 키워드는 자바 heap영역에 메모리를 할당한다. 힙은 애플리케이션 영역에 접근할 수 있는 
+new 키워드는 자바 heap영역에 메모리를 할당한다. 힙은 애플리케이션 영역에 접근할 수 있는 메모리의 영역이다. 객체를 할당할때 이용할 수 있는 메모리가 충분치 않으면 JVM은 가비지 컬렉션을 이용해 힙에서 메모리를 재사용하려고 한다. 그래도 충분한 메모리가 없으면 OutOfMemoryError가 발생하며 JVM이 종료된다. 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM2NDg5MDQ1M119
+eyJoaXN0b3J5IjpbLTEzNjc2MDM5MDhdfQ==
 -->
