--- a/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
+++ b/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
@@ -55,8 +55,9 @@ JVM에서 가장 먼저 해야할 일은 컴파일이다. 컴파일을 하면 .c
 
 로드가 되면 JVM은 바이트코드가 유효한지 검증한다. 검증이 되면 JVM은 코드가 실행되는 아키텍쳐와 운영체제에 맞는 명령어로 바이트 코드를 해석할 수 있다.
 
-native 메서드란 무엇인가?
-정상적인 자바 클래스 정의는 
+> native 메서드란 무엇인가?
+
+자바에서는 C나 C++의 잘 정의된 헤더를 사용할 수 있는 native 메서드를 사용할 수 있다. 
 
 
 
@@ -65,7 +66,7 @@ native 메서드란 무엇인가?
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNjMzNDE4NDksMTA3ODgxNTM3OCwtMT
+eyJoaXN0b3J5IjpbLTE0MzcxMDAxNjMsMTA3ODgxNTM3OCwtMT
 g3Njg0ODA3NiwyODA1MDAxMzcsLTMyOTY2NjQyNywxMjc1MTQ2
 MzMwLDEwNjkzNzIwNTRdfQ==
 -->
