books/Programming Interview/Java/CH10 자바 가상머신 이해하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
+++ b/books/Programming Interview/Java/CH10 자바 가상머신 이해하.md
@@ -57,7 +57,7 @@ JVM에서 가장 먼저 해야할 일은 컴파일이다. 컴파일을 하면 .c
 
 > native 메서드란 무엇인가?
 
-자바에서는 C나 C++의 잘 정의된 헤더를 사용할 수 있는 native 메서드를 사용할 수 있다. 
+자바에서는 C나 C++의 잘 정의된 헤더를 사용할 수 있는 native 메서드를 사용할 수 있다. 코드가 JVM에 로드됐을때 고유(native) 코드를 등록해야 한다 그래야 메서드 호출시 코드를 실행하는데 정확히 필요한 것을 알 수 있다. 
 
 
 
@@ -66,7 +66,7 @@ JVM에서 가장 먼저 해야할 일은 컴파일이다. 컴파일을 하면 .c
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzcxMDAxNjMsMTA3ODgxNTM3OCwtMT
-g3Njg0ODA3NiwyODA1MDAxMzcsLTMyOTY2NjQyNywxMjc1MTQ2
-MzMwLDEwNjkzNzIwNTRdfQ==
+eyJoaXN0b3J5IjpbMTI2ODY2MjE4OCwtMTQzNzEwMDE2MywxMD
+c4ODE1Mzc4LC0xODc2ODQ4MDc2LDI4MDUwMDEzNywtMzI5NjY2
+NDI3LDEyNzUxNDYzMzAsMTA2OTM3MjA1NF19
 -->
