books/Programming Interview/Java/CH11 동시.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -1,9 +1,12 @@
 # 쓰레드 이용하기 
 
+> 코드를 병렬로 실행하려면 어떻게 해야 하는가?
 
+JVM에 요청해서 직접 스레드를 생성할때 발생되는 상황인 동시성 작업을 
+;
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTcxMTgzNjZdfQ==
+eyJoaXN0b3J5IjpbLTgyMzU1NDYyXX0=
 -->
