--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -2,11 +2,10 @@
 
 > 코드를 병렬로 실행하려면 어떻게 해야 하는가?
 
-JVM에 요청해서 직접 스레드를 생성할때 발생되는 상황인 동시성 작업을 
-;
-
+모든 애플리케이션은 최소한 하나의 스레드는 가지고 있어야 한다. 
+직접 스레드를 만들 수 도 있는데
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyMzU1NDYyXX0=
+eyJoaXN0b3J5IjpbLTE1ODY2MzE4MDIsLTgyMzU1NDYyXX0=
 -->
