--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -3,9 +3,11 @@
 > 코드를 병렬로 실행하려면 어떻게 해야 하는가?
 
 모든 애플리케이션은 최소한 하나의 스레드는 가지고 있어야 한다. 
-직접 스레드를 만들 수 도 있는데
+직접 스레드를 만들 수 도 있는데 새로운 스레드를 만들때 마다 코드는 해당 스레드에서 즉시 실행된다. 
+
+새로운 스레드를 생성할때는 새로운 Thread객체를 생성해야 한다. 이 객체는 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODY2MzE4MDIsLTgyMzU1NDYyXX0=
+eyJoaXN0b3J5IjpbNDc3NTI4NDczLC04MjM1NTQ2Ml19
 -->
