--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -7,9 +7,9 @@
 
 새로운 스레드를 생성할때는 새로운 Thread객체를 생성해야 한다. 이 객체는 Runnable 인터페이스의 객체를 전달받는다. 또한 Runnable 인터페이스는 public void run()이란 메세드가 있는데, **스레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.** 
 
-
+Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다.
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzU1NzM2NywtODIzNTU0NjJdfQ==
+eyJoaXN0b3J5IjpbNTc3MTEwODQwLC04MjM1NTQ2Ml19
 -->
