books/Programming Interview/Java/CH11 동시.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -9,9 +9,12 @@
 
 Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
 
-Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM  
+Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start0으로 호출하는 private 메서드 역시 확인할 수 있다.
+
+Thread 수행 순서를 결정하는 것은 전적으로  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1OTEyMDMyNywtODIzNTU0NjJdfQ==
+eyJoaXN0b3J5IjpbMTQ0NTY2MzAyNCwxNDU5MTIwMzI3LC04Mj
+M1NTQ2Ml19
 -->
