books/Programming Interview/Java/CH11 동시.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -11,10 +11,14 @@ Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start0으로 호출하는 private 메서드 역시 확인할 수 있다.
 
-Thread 수행 순서를 결정하는 것은 전적으로  
+Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
+
+> Thread 클래스와 Excutor인터페이스의 차이점은 무엇인가?
+
+자바 4에서 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0NTY2MzAyNCwxNDU5MTIwMzI3LC04Mj
+eyJoaXN0b3J5IjpbMTIwNTczMDAzMywxNDU5MTIwMzI3LC04Mj
 M1NTQ2Ml19
 -->
