--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -15,10 +15,14 @@ Thread 수행 순서를 결정하는 것은 전적으로  JVM이다.
 
 > Thread 클래스와 Excutor인터페이스의 차이점은 무엇인가?
 
-자바 4에서 
+자바 4에서 도입된 동시성 프레임워크는 동시성을 위한 클래스들을 제공했는데 자바의 스레드 모델을 이용하는데 큰 도움을 주엇다. 
+
+자바에서 Thread 생성은 시스템 자원이 많이 드는 연산이므로 운영체제는 애플리케이션에서 실행되는 스레드 갯수를 제한하게 된다. Thread pool을 이용함으로써 새로운 스레드를 이용하기 보다는 재사용을 하게 된다. 
+
+자바 동시성 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwNTczMDAzMywxNDU5MTIwMzI3LC04Mj
+eyJoaXN0b3J5IjpbMTg0MDI1OTgxOSwxNDU5MTIwMzI3LC04Mj
 M1NTQ2Ml19
 -->
