--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -20,10 +20,10 @@ Thread 수행 순서를 결정하는 것은 전적으로  JVM이다.
 자바에서 Thread 생성은 시스템 자원이 많이 드는 연산이므로 운영체제는 애플리케이션에서 실행되는 스레드 갯수를 제한하게 된다. Thread pool을 이용함으로써 새로운 스레드를 이용하기 보다는 재사용을 하게 된다. 
 
 자바 동시성 프레임워크는 일반적인 경우에 사용하는 스레드 풀을 제공하며 이를 확장해서 쓸수 있다. 
-동시성 프레임 워크에서 제공하는 Excutor 클래스는 병렬 컴퓨팅에 추상화이고 동시에 실행될 코드를 관리할 수 있다. 
+동시성 프레임 워크에서 제공하는 Excutor 클래스는 병렬 컴퓨팅에 추상화이고 동시에 실행될 코드를 관리할 수 있다. Excu
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzAwMjgyNDUsMTQ1OTEyMDMyNywtOD
-IzNTU0NjJdfQ==
+eyJoaXN0b3J5IjpbLTgwNTYwNTgsLTIwNzAwMjgyNDUsMTQ1OT
+EyMDMyNywtODIzNTU0NjJdfQ==
 -->
