books/Programming Interview/Java/CH11 동시.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -24,8 +24,10 @@ Thread 수행 순서를 결정하는 것은 전적으로  JVM이다.
 
 Excutors.newCachedThreadPool은 Exectuor 객체 대신에 ExcutorService 인터페이스의 객체를 반환한다. Executor 인터페이스의 주요 장점은 void 반환 타입을 갖는 Runnable 객체를 통해 Executor 객체와는 달리 병렬 계싼으로 계산을 얻을 수 있다. ExcutorService 객체는 Excutor 객체와는 달리 코드 실행을 중단시킬 수 있는 기능이 있다.
 
+> 동시 코드는 어떻게 테스트 하는가?
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3MjYwMzY1NSwtMjA3MDAyODI0NSwxND
-U5MTIwMzI3LC04MjM1NTQ2Ml19
+eyJoaXN0b3J5IjpbOTU3MDAzNDI0LC0yMDcwMDI4MjQ1LDE0NT
+kxMjAzMjcsLTgyMzU1NDYyXX0=
 -->
