--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -52,12 +52,14 @@ execService.shutdown();
 자바 동시성 프레임워크는 일반적인 경우에 사용하는 스레드 풀을 제공하며 이를 확장해서 쓸수 있다. 
 동시성 프레임 워크에서 제공하는 Excutor 클래스는 병렬 컴퓨팅에 추상화이고 동시에 실행될 코드를 관리할 수 있다. 이 Excutor 클래스의 인터페이스는 void execute(Runnable)이다. 모든 구현은 특정 Runnable을 실행하는 스레드를 관리할 수 있다. 
 
-Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 ExcutorService 객체를 반환한다. Executor 인터페이스의 주요 장점은 void 반환 타입을 갖는 Runnable 객체를 통해 Executor 객체와는 달리 병렬 계싼으로 계산을 얻을 수 있다. ExcutorService 객체는 Excutor 객체와는 달리 코드 실행을 중단시킬 수 있는 기능이 있다.
+Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 ExcutorService 객체를 반환한다. ExcutorService 객체는 Excutor 객체와는 달리 코드 실행을 중단시킬 수 있는 기능이 있다.
 
 > 동시 코드는 어떻게 테스트 하는가?
+ 
+ 동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwMjI3NDk1MSwxNzEyMjE0NDk5LC0yMD
+eyJoaXN0b3J5IjpbMTI4MzUxMjc5NywxNzEyMjE0NDk5LC0yMD
 cwMDI4MjQ1LDE0NTkxMjAzMjcsLTgyMzU1NDYyXX0=
 -->
