--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -58,10 +58,11 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
  
  동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 공유를 잠궈둬야 한다. 
 
-모든 자바 객체는 스스로 락을 유지할 수 있는 능력이 있다. 따라서 synchronized(object) 코드를 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할수 있도록 한다. 
+모든 자바 객체는 스스로 락을 유지할 수 있는 능력이 있다. 따라서 synchronized(object) 코드를 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할수 있도록 한다. 물론 이런 락엔
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTYzMzUzMzMsMTcxMjIxNDQ5OSwtMj
-A3MDAyODI0NSwxNDU5MTIwMzI3LC04MjM1NTQ2Ml19
+eyJoaXN0b3J5IjpbMjEzNzQyMzI2MCwtMjExNjMzNTMzMywxNz
+EyMjE0NDk5LC0yMDcwMDI4MjQ1LDE0NTkxMjAzMjcsLTgyMzU1
+NDYyXX0=
 -->
