--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -62,10 +62,12 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Atomic 클래스는 무엇을 제공하는가? 
 
+자바 동시성 프레임 워크에는 모든 기본 타입을 Wrapping하는 Atomic 클래스가 있다. 이 클래스들은 모든 원자 연산을 보장한다. 즉 다른 쓰레드는 **모두 메서드 호출이 완료될때까지 이 클래스의 참조가 수정되지 않는다.**
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4MzQ0OTc0NywtMzA2NzI1MjExLC0yMT
-E2MzM1MzMzLDE3MTIyMTQ0OTksLTIwNzAwMjgyNDUsMTQ1OTEy
-MDMyNywtODIzNTU0NjJdfQ==
+eyJoaXN0b3J5IjpbOTExMjYwOTcwLC0zMDY3MjUyMTEsLTIxMT
+YzMzUzMzMsMTcxMjIxNDQ5OSwtMjA3MDAyODI0NSwxNDU5MTIw
+MzI3LC04MjM1NTQ2Ml19
 -->
