--- a/books/Programming Interview/Java/CH11 동시.md
+++ b/books/Programming Interview/Java/CH11 동시.md
@@ -66,13 +66,15 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 >왜 불변 객체를 써야하는가? 
 
-qnfqus rorcpfmf t
+불변객체는 값이 변하지 않기 때문에 스레드에서 락을 사용하지 않아도 된다. 이는 동기화된 코드 블록 사이에서 값 하나를 이용할 수 있을때까지 대기하는 시간을 아낄 수 있다는 말이다.  불변 객체의 값을 수정해야할 경우 수정된 새로운 객체를 만들어야 한다. 
+
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODIyMjI0NzEsLTMwNjcyNTIxMSwtMj
+eyJoaXN0b3J5IjpbLTE2NDY1MDg5NDUsLTMwNjcyNTIxMSwtMj
 ExNjMzNTMzMywxNzEyMjE0NDk5LC0yMDcwMDI4MjQ1LDE0NTkx
 MjAzMjcsLTgyMzU1NDYyXX0=
 -->
