--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -2,9 +2,9 @@
 
 SQL은 관계형 데이터베이스에 데이터를 관리하고 질의를 하기 위해 사용하는 선언전 언어다. 관계형 데이터 베이스의 표준 언어이며, 특정 데이터베이스 구현에 얽메이지 않는다. 
 
-> 참조 무결성
+외래키를 정의하면 참조 무결성을 강화할 수 있다.
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzMjYzNTkxMiwtMTU4ODc5MjIzN119
+eyJoaXN0b3J5IjpbLTExNTM2NTM1MiwtMTU4ODc5MjIzN119
 -->
