--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -2,10 +2,18 @@
 
 SQL은 관계형 데이터베이스에 데이터를 관리하고 질의를 하기 위해 사용하는 선언전 언어다. 관계형 데이터 베이스의 표준 언어이며, 특정 데이터베이스 구현에 얽메이지 않는다. 
 
->c
+>참조 무결성?
+
+> ACID?
+> Atomic
+> consistency
+> integration
+> 
+
+> 5형식까지 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE0NzI3NTY1MCwtMTE1MzY1MzUyLC0xNT
-g4NzkyMjM3XX0=
+eyJoaXN0b3J5IjpbLTExNzY4NDYxODcsLTExNTM2NTM1MiwtMT
+U4ODc5MjIzN119
 -->
