books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -2,19 +2,20 @@
 
 SQL은 관계형 데이터베이스에 데이터를 관리하고 질의를 하기 위해 사용하는 선언전 언어다. 관계형 데이터 베이스의 표준 언어이며, 특정 데이터베이스 구현에 얽메이지 않는다. 
 
->참조 무결성?
+>참조 무결성(Referential integrity)
+
 
 > ACID?
 > In computer science, **ACID** (Atomicity, Consistency, Isolation, Durability) is a set of properties of database transaction intended to guarantee validity even in the event of errors, power failures, etc.
 
 * Isolation is the main goal of concurrency control Transactions are often executed concurrently.(e.g., multiple transactions reading and writing to a table at the same time). [Isolation](https://en.wikipedia.org/wiki/Isolation_(database_systems) "Isolation (database systems)") ensures that concurrent execution of transactions leaves the database in the same state that would have been obtained if the transactions were executed sequentially.
-* Durability guarantees that once a transaction has been committed, it will remain committed even in the case of a system failure (e.g., power outage or [crash](https://en.wikipedia.org/wiki/Crash_(computing) "Crash (computing)")). This usually means that completed transactions (or their effects) are recorded in [non-volatile memory](https://en.wikipedia.org/wiki/Non-volatile_memory "Non-volatile memory")
+* Durability guarantees that once a transaction has been committed, it will remain committed even in the case of a system failure (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
   
 
 > 5형식까지 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY4NjA4NzIyLC0xMjg2NTM5MTEsLTExNT
-M2NTM1MiwtMTU4ODc5MjIzN119
+eyJoaXN0b3J5IjpbNTkxNDczMTcsLTEyODY1MzkxMSwtMTE1Mz
+Y1MzUyLC0xNTg4NzkyMjM3XX0=
 -->
