books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -23,7 +23,7 @@ ACID
 Atomicity
 : 트랜잭션의 내용들은 모두 적용되거나 아니면 하나도 적용되지 않아야 한다. 일부만 적용될수 없다. 
 Consistency
-: 트랜잭션 적용 후에 데이터베이스에 모든 
+: 트랜잭션 적용 후에 데이터베이스에 모든 데이터는 일관 되어야 한다. 
 
 * Isolation is the main goal of concurrency control Transactions are often executed concurrently.(e.g., multiple transactions reading and writing to a table at the same time). [Isolation](https://en.wikipedia.org/wiki/Isolation_(database_systems) "Isolation (database systems)") ensures that concurrent execution of transactions leaves the database in the same state that would have been obtained if the transactions were executed sequentially.
 * Durability guarantees that once a transaction has been committed, it will remain committed even in the case of a system failure (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
@@ -35,6 +35,6 @@ Consistency
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODAyMjU4MjQsLTEyODY1MzkxMSwtMT
+eyJoaXN0b3J5IjpbLTExMzY1MjYyNzQsLTEyODY1MzkxMSwtMT
 E1MzY1MzUyLC0xNTg4NzkyMjM3XX0=
 -->
