books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -27,10 +27,11 @@ Consistency
 : 트랜잭션 적용 후에 데이터베이스에 모든 데이터는 일관 되어야 한다. 
 
 Isolation
-: 동시성 컨ㅌ
+: 다수의 트랜잭션이 동시에 동작할때, 트랜잭션이 순차적으로 동작하도록 보장한다. 즉 동시성 컨트롤이 주요 목표인 속성이다.
 
+Durability
+: 트랜잭션이 커밋되면 
 
-* Isolation is the main goal of concurrency control Transactions are often executed concurrently.(e.g., multiple transactions reading and writing to a table at the same time). [Isolation](https://en.wikipedia.org/wiki/Isolation_(database_systems) "Isolation (database systems)") ensures that concurrent execution of transactions leaves the database in the same state that would have been obtained if the transactions were executed sequentially.
 * Durability guarantees that once a transaction has been committed, it will remain committed even in the case of a system failure (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
   
 
@@ -40,6 +41,6 @@ Isolation
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc5MjI0MDU4MiwtMTI4NjUzOTExLC0xMT
-UzNjUzNTIsLTE1ODg3OTIyMzddfQ==
+eyJoaXN0b3J5IjpbOTE3NTE1MDMwLC0xMjg2NTM5MTEsLTExNT
+M2NTM1MiwtMTU4ODc5MjIzN119
 -->
