--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -30,9 +30,8 @@ Isolation
 : 다수의 트랜잭션이 동시에 동작할때, 트랜잭션이 순차적으로 동작하도록 보장한다. 즉 동시성 컨트롤이 주요 목표인 속성이다.
 
 Durability
-: 트랜잭션이 커밋되면 
+: 트랜잭션이 커밋되면 그 내용은 영구히 남아야 한다. 심지어 시스템이 실패해도 남아야 한다. (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
 
-* Durability guarantees that once a transaction has been committed, it will remain committed even in the case of a system failure (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
   
 
 
@@ -41,6 +40,6 @@ Durability
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTE3NTE1MDMwLC0xMjg2NTM5MTEsLTExNT
-M2NTM1MiwtMTU4ODc5MjIzN119
+eyJoaXN0b3J5IjpbMTQ1NTY2NDAyMywtMTI4NjUzOTExLC0xMT
+UzNjUzNTIsLTE1ODg3OTIyMzddfQ==
 -->
