books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -32,7 +32,9 @@ Isolation
 Durability
 : 트랜잭션이 커밋되면 그 내용은 영구히 남아야 한다. 심지어 시스템이 실패해도 남아야 한다. (e.g., power outage or crash. This usually means that completed transactions (or their effects) are recorded in non-volatile memory
 
-  
+> NoSQL이란 무엇인가?
+
+NoSQL은 관계형 데이터베이스 모델을 따르지 않은 데이터 베이스를 의미한다. 반 정규화에 의존하여 거대한 데이터를 처리하는데 유리하다. NoSQL데이터베이스는 SQL 같은 표준화된 접근 방법이 없다. 각자 나름대로의 방법ㅇ  
 
 
 
@@ -40,6 +42,6 @@ Durability
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1NTY2NDAyMywtMTI4NjUzOTExLC0xMT
+eyJoaXN0b3J5IjpbLTg3MDA0MDEzMCwtMTI4NjUzOTExLC0xMT
 UzNjUzNTIsLTE1ODg3OTIyMzddfQ==
 -->
