books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -50,8 +50,9 @@ ResultSet rs = stmt.executeQuery("");
 
 ## 인메모리 데이터베이스 테스팅
 
+데이터 베이스에 접속할 애플리케이션을 개발할때 데이터 베이스를 테스트 할 수 있는 상태로 유지하는 건 가끔 문제가 될 수 있다. 
 
-
+인메모리 데이터 베이스의 자료는 JVM 실행을 종료하면 사라
   
 
 
@@ -60,6 +61,7 @@ ResultSet rs = stmt.executeQuery("");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzMzM5MDgwOCwxMDQyODU2MjAzLC0xMj
-g2NTM5MTEsLTExNTM2NTM1MiwtMTU4ODc5MjIzN119
+eyJoaXN0b3J5IjpbLTE0NjQ3MzU0NzgsLTgzMzM5MDgwOCwxMD
+QyODU2MjAzLC0xMjg2NTM5MTEsLTExNTM2NTM1MiwtMTU4ODc5
+MjIzN119
 -->
