--- a/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
+++ b/books/Programming Interview/Java/CH12 자바 애플리케이션과 데이터베이스 통합하.md
@@ -52,16 +52,11 @@ ResultSet rs = stmt.executeQuery("");
 
 데이터 베이스에 접속할 애플리케이션을 개발할때 데이터 베이스를 테스트 할 수 있는 상태로 유지하는 건 가끔 문제가 될 수 있다. 
 
-인메모리 데이터 베이스의 자료는 JVM 실행을 종료하면 사라
+인메모리 데이터 베이스의 자료는 JVM 실행을 종료하면 사라지는데, 이는 인메모리 데이터 베이스를 데이터 유지에 신경쓰지 않고 테스트 데이터로 작업하기 쉽게 만든다. 인메모리 데이터베이스는 로컬 장비에서 실행되므로 네트워크 트래픽이 없고 귀찮은 연결관리를 하지 않아도 된다. 
   
-
-
-
-
-
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NjQ3MzU0NzgsLTgzMzM5MDgwOCwxMD
-QyODU2MjAzLC0xMjg2NTM5MTEsLTExNTM2NTM1MiwtMTU4ODc5
-MjIzN119
+eyJoaXN0b3J5IjpbLTcxMzkxMjUxNSwtODMzMzkwODA4LDEwND
+I4NTYyMDMsLTEyODY1MzkxMSwtMTE1MzY1MzUyLC0xNTg4Nzky
+MjM3XX0=
 -->
