books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -3,10 +3,10 @@
 톰캣과 제티는 둘자 자바 서블릿 API를 구현한다. 
  
 API
-: Application Programming Interface
+: Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwOTM3NjI2NywtMTE2MDAzODM1M119
+eyJoaXN0b3J5IjpbLTg1MDM2MzY3OSwtMTE2MDAzODM1M119
 -->
