books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -1,6 +1,9 @@
 # 톰캣과 서블릿 API
 
-톰캣과 제티는 둘자 자바 서블릿 API를 구현한다. 
+톰캣과 제티는 둘다 자바 서블릿 API를 구현한다. 
+
+자바 서블릿 API
+: JVM위에서 실행되는 애플리케이션을 
  
 API
 : Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
@@ -8,5 +11,6 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg1MDM2MzY3OSwtMTE2MDAzODM1M119
+eyJoaXN0b3J5IjpbLTU5MDk4NjYwLC04NTAzNjM2NzksLTExNj
+AwMzgzNTNdfQ==
 -->
