--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -2,10 +2,16 @@
 
 톰캣과 제티는 둘다 자바 서블릿 API를 구현한다. 
 
+
 자바 서블릿 API
 : JVM위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
-정의할때는 서블릿들을 정의하고 서블릿 컨테이너가 서블릿을 어떻게  제공할지도 결정한다.
+web.xml에는 웹 애플리케이션에서 사용할 서블릿 또는 
+
+아주쉽죠? 우리가 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너 입니다. 예를 들어, 서블릿이 어떠한 역할을 수행하는 정의서라고 보면, 서블릿 컨테이너는 그 정의서를 보고 수행한다고 볼 수 있습니다. 서블릿 컨테이너는 클라이언트의 요청(Request)을 받아주고 응답(Response)할 수 있게, 웹서버와 소켓을 만들어 통신하며 대표적인 예로 톰캣(Tomcat)이 있습니다. 톰캣은 실제로 웹서버와 통신하여 JSP(자바 서버 페이지)와 Servlet이 작동하는 환경을 제공해줍니다.
+
+
+
  
 API
 : Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
@@ -13,6 +19,6 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDY4MzA2OTgsLTEzMTYyOTEyNSwtOD
-UwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbMTMwMTUyMjYxNSwtMTUwNjgzMDY5OCwtMT
+MxNjI5MTI1LC04NTAzNjM2NzksLTExNjAwMzgzNTNdfQ==
 -->
