--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -6,10 +6,41 @@
 자바 서블릿 API
 : JVM위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
-web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 서블릿은 HTTP 요청에 대해서 실제 필요한 역할을 수행하는 객체이다. 하지만 단수니 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다.
+web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 
 
-서블릿 컨테이너는 클라이언트의 요청(Request)을 받아주고 응답(Response)할 수 있게, 웹서버와 소켓을 만들어 통신하며 대표적인 예로 톰캣(Tomcat)이 있습니다. 톰캣은 실제로 웹서버와 통신하여 JSP(자바 서버 페이지)와 Servlet이 작동하는 환경을 제공해줍니다.
+**1. 서블릿의 생명 주기 관리**
 
+서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
+
+또한, 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
+
+서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
+
+  
+
+**2. 멀티 스레딩 관리**
+
+클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다.
+
+  
+
+**3.보안 관리**
+
+서블릿 컨테이너 자체에서 보안 관련된 기능을 제공하므로 서블릿에서는 보안과 관련된 로직 필요 X
+
+  
+
+  
+
+  
+
+서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
+
+  
+  
+출처: [https://simsimjae.tistory.com/272](https://simsimjae.tistory.com/272) [104%]  
+  
+출처: [https://simsimjae.tistory.com/272](https://simsimjae.tistory.com/272) [104%]
 
 
  
@@ -19,7 +50,7 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzY0ODMzNjQsMTMwMTUyMjYxNSwtMT
-UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
-MzgzNTNdfQ==
+eyJoaXN0b3J5IjpbMTAxMTE0NDQwNywxMzAxNTIyNjE1LC0xNT
+A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
+ODM1M119
 -->
