books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -6,17 +6,14 @@
 자바 서블릿 API
 : JVM위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
-web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 
+web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
 
-**1. 서블릿의 생명 주기 관리**
+서블릿 컨테이너의 역할
 
-서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
-
-또한, 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
-
-서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
-
-  
+1서블릿 생명 주기 관리
+> 서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
+> 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
+> 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
 
 **2. 멀티 스레딩 관리**
 
@@ -34,7 +31,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
   
 
-서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
+
 
   
   
@@ -50,7 +47,7 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAxMTE0NDQwNywxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbLTEzNjA4Mzg0MzcsMTMwMTUyMjYxNSwtMT
+UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
+MzgzNTNdfQ==
 -->
