books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -15,31 +15,14 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 	- 서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
 	- 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
 	- 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
+2. 멀티 스레딩 관리
+	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다.
 
-**2. 멀티 스레딩 관리**
-
-클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다.
-
-  
-
-**3.보안 관리**
-
-서블릿 컨테이너 자체에서 보안 관련된 기능을 제공하므로 서블릿에서는 보안과 관련된 로직 필요 X
-
-  
-
-  
-
-  
+### web.xml
 
 
 
-  
-  
-출처: [https://simsimjae.tistory.com/272](https://simsimjae.tistory.com/272) [104%]  
-  
-출처: [https://simsimjae.tistory.com/272](https://simsimjae.tistory.com/272) [104%]
-
+ 
 
  
 API
@@ -48,7 +31,7 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY1NzM3NDgwNCwxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbNjI5ODA0MjEzLDEzMDE1MjI2MTUsLTE1MD
+Y4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4
+MzUzXX0=
 -->
