books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -19,11 +19,16 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다.
 
 ### web.xml
-
-
-
- 
-
+```
+<servlet>  
+ <servlet-name>dispatcherServlet</servlet-name>  
+ <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> 
+ </servlet>
+<servlet-mapping>  
+ <servlet-name>dispatcherServlet</servlet-name>  
+ <url-pattern>/</url-pattern>  
+</servlet-mapping>
+```
  
 API
 : Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
@@ -31,7 +36,7 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjI5ODA0MjEzLDEzMDE1MjI2MTUsLTE1MD
-Y4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4
-MzUzXX0=
+eyJoaXN0b3J5IjpbMTU2MjQxNDYzMiwxMzAxNTIyNjE1LC0xNT
+A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
+ODM1M119
 -->
