--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -26,9 +26,10 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
  </servlet>
 <servlet-mapping>  
  <servlet-name>dispatcherServlet</servlet-name>  
- <url-pattern>/</url-pattern>  
+ <url-pattern>/api</url-pattern>  
 </servlet-mapping>
 ```
+즉 localhost:8088/api라는 url로 접근하면, 
  
 API
 : Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
@@ -36,7 +37,7 @@ API
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU2MjQxNDYzMiwxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbNTI0MTk4MDkxLDEzMDE1MjI2MTUsLTE1MD
+Y4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4
+MzUzXX0=
 -->
