--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -2,6 +2,9 @@
 
 톰캣과 제티는 둘다 자바 서블릿 API를 구현한다. 
 
+API
+: Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
+
 자바 서블릿 API
 : JVM위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
@@ -16,7 +19,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 	- 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
 	- 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
 2. 멀티 스레딩 관리
-	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 즉 서블릿은 싱글턴?
+	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 하지만 그렇다고 서블릿이 싱글턴 패턴을 따르지는 않는다. 여러 객체가 생성되어 여러 클라이언트 요청 처리가 가능하다. 
 
 ### web.xml
 ```
@@ -31,13 +34,10 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 ```
 즉 localhost:8088/api라는 url로 요청이 들어오면 스프링 프레임워크에서 제공하는 DispatcherServlet 객체를 사용하여 필요한 서비스를 제공한다. 
  
-API
-: Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. When people speak of “an API”, they sometimes generalize and actually mean “a publicly available web-based API that returns data, likely in JSON or XML”.  The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
-
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3NzE5NDM0MCwxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLTE1MD
+Y4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4
+MzUzXX0=
 -->
