--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -12,13 +12,15 @@ API
 
 web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
 
-서블릿 컨테이너의 역할
+### 서블릿 컨테이너의 역할
+1. 웹서버와의 통신 지원
+	- 서블릿 컨테이너는 서블릿과 웹서버가 손쉽게 통신할 수 있게 해줍니다. 일반적으로 우리는 소켓을 만들고 listen, accept 등을 해야하지만 서블릿 컨테이너는 이러한 기능을 API로 제공하여 복잡한 과정을 생략할 수 있게 해줍니다.
 
-1. 서블릿 생명 주기 관리
+3. 서블릿 생명 주기 관리
 	- 서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
 	- 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
 	- 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
-2. 멀티 스레딩 관리
+4. 멀티 스레딩 관리
 	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 하지만 그렇다고 서블릿이 싱글턴 패턴을 따르지는 않는다. 여러 객체가 생성되어 여러 클라이언트 요청 처리가 가능하다. 
 
 ### web.xml
@@ -37,7 +39,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLTE1MD
-Y4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4
-MzUzXX0=
+eyJoaXN0b3J5IjpbLTQ4MDk2MTY3MSw2NDQ1MTQ0NTcsMTMwMT
+UyMjYxNSwtMTUwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2
+NzksLTExNjAwMzgzNTNdfQ==
 -->
