books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -15,12 +15,11 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 ### 서블릿 컨테이너의 역할
 1. 웹서버와의 통신 지원
 	- 서블릿 컨테이너는 서블릿과 웹서버가 손쉽게 통신할 수 있게 해줍니다. 일반적으로 우리는 소켓을 만들고 listen, accept 등을 해야하지만 서블릿 컨테이너는 이러한 기능을 API로 제공하여 복잡한 과정을 생략할 수 있게 해줍니다.
-
-3. 서블릿 생명 주기 관리
+2. 서블릿 생명 주기 관리
 	- 서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
 	- 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
 	- 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
-4. 멀티 스레딩 관리
+3. 멀티 스레딩 관리
 	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 하지만 그렇다고 서블릿이 싱글턴 패턴을 따르지는 않는다. 여러 객체가 생성되어 여러 클라이언트 요청 처리가 가능하다. 
 
 ### web.xml
@@ -39,7 +38,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ4MDk2MTY3MSw2NDQ1MTQ0NTcsMTMwMT
-UyMjYxNSwtMTUwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2
-NzksLTExNjAwMzgzNTNdfQ==
+eyJoaXN0b3J5IjpbNTUzMDgyMTE5LDY0NDUxNDQ1NywxMzAxNT
+IyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3
+OSwtMTE2MDAzODM1M119
 -->
