books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -35,10 +35,15 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 ```
 즉 localhost:8088/api라는 url로 요청이 들어오면 스프링 프레임워크에서 제공하는 DispatcherServlet 객체를 사용하여 필요한 서비스를 제공한다. 
  
+ ### 서블릿
+
+서블릿 컨테이너에 들어온 요청을 보고 컨테이너는 미리 스레드를 생성한다. 그리고 요청에 대응하는 서블릿이 미리 생성된 스레드를 사용하여 
+호출된 서블릿의 작업을 담당하게 된 스레드(미리 생성된 스레드)는 요청에 따라 doPost() 또는 doGet()을 호출한다.  
+⑤ 호출된 doPost() 또는 doGet() 메소드는 생성된 동적페이지를 Response객체에 실어서 컨테이너에 전달한다.
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTUzMDgyMTE5LDY0NDUxNDQ1NywxMzAxNT
-IyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3
-OSwtMTE2MDAzODM1M119
+eyJoaXN0b3J5IjpbLTI1NTgwOTIyNyw2NDQ1MTQ0NTcsMTMwMT
+UyMjYxNSwtMTUwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2
+NzksLTExNjAwMzgzNTNdfQ==
 -->
