books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -40,11 +40,14 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 서블릿 컨테이너에 들어온 요청을 보고 컨테이너는 미리 스레드를 생성한다. 그리고 요청에 대응하는 서블릿을 불러  미리 생성된 스레드를 사용하여 doPost() 또는 doGet()을 호출한다.  
 
 ```
+public abstract class HttpServlet extends GenericServlet
+```
+HttpServelet은 abstract클래스이지만 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMDIxNDUyNSwxNzUzNzQ4ODEyLDY0ND
-UxNDQ1NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4LC0xMzE2Mjkx
-MjUsLTg1MDM2MzY3OSwtMTE2MDAzODM1M119
+eyJoaXN0b3J5IjpbNTMyMzIwMDk2LDE3NTM3NDg4MTIsNjQ0NT
+E0NDU3LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLTEzMTYyOTEy
+NSwtODUwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
 -->
