--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -42,12 +42,15 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 ```
 public abstract class HttpServlet extends GenericServlet
 ```
-HttpServelet은 abstract클래스이지만 
+HttpServelet은 abstract클래스이다. 
+
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMyMzIwMDk2LDE3NTM3NDg4MTIsNjQ0NT
-E0NDU3LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLTEzMTYyOTEy
-NSwtODUwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbMjAwNjM0NzM4Niw1MzIzMjAwOTYsMTc1Mz
+c0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMTUwNjgzMDY5
+OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAwMzgzNTNdfQ
+==
 -->
