books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -42,15 +42,14 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 ```
 public abstract class HttpServlet extends GenericServlet
 ```
-HttpServelet은 abstract클래스이다. 
+HttpServelet은 abstract클래스이다. 구현 servlet을 만들려면 doGet 메서드와 doPost 메서드를 @Override해서 구현하면 된다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAwNjM0NzM4Niw1MzIzMjAwOTYsMTc1Mz
-c0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMTUwNjgzMDY5
-OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAwMzgzNTNdfQ
-==
+eyJoaXN0b3J5IjpbNzY1OTMyODExLDUzMjMyMDA5NiwxNzUzNz
+Q4ODEyLDY0NDUxNDQ1NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4
+LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAzODM1M119
 -->
