books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -22,6 +22,15 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 3. 멀티 스레딩 관리
 	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 하지만 그렇다고 서블릿이 싱글턴 패턴을 따르지는 않는다. 여러 객체가 생성되어 여러 클라이언트 요청 처리가 가능하다. 
 
+ ### 서블릿
+
+서블릿 컨테이너에 들어온 요청을 보고 컨테이너는 미리 스레드를 생성한다. 그리고 요청에 대응하는 서블릿을 불러  미리 생성된 스레드를 사용하여 doPost() 또는 doGet()을 호출한다.  
+
+```
+public abstract class HttpServlet extends GenericServlet
+```
+HttpServelet은 abstract클래스이다. 구현 servlet을 만들려면 doGet 메서드와 doPost 메서드를 @Override해서 구현하면 된다. 
+
 ### web.xml
 ```
 <servlet>  
@@ -32,24 +41,27 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
  <servlet-name>dispatcherServlet</servlet-name>  
  <url-pattern>/api</url-pattern>  
 </servlet-mapping>
+<filter>  
+ <filter-name>encodingFilter</filter-name>  
+ <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
+ <init-param> <param-name>encoding</param-name>  
+ <param-value>UTF-8</param-value>  
+ </init-param></filter>  
+<filter-mapping>  
+ <filter-name>encodingFilter</filter-name>  
+ <url-pattern>/*</url-pattern>  
+</filter-mapping>
 ```
 즉 localhost:8088/api라는 url로 요청이 들어오면 스프링 프레임워크에서 제공하는 DispatcherServlet 객체를 사용하여 필요한 서비스를 제공한다. 
  
- ### 서블릿
 
-서블릿 컨테이너에 들어온 요청을 보고 컨테이너는 미리 스레드를 생성한다. 그리고 요청에 대응하는 서블릿을 불러  미리 생성된 스레드를 사용하여 doPost() 또는 doGet()을 호출한다.  
-
-```
-public abstract class HttpServlet extends GenericServlet
-```
-HttpServelet은 abstract클래스이다. 구현 servlet을 만들려면 doGet 메서드와 doPost 메서드를 @Override해서 구현하면 된다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzY1OTMyODExLDUzMjMyMDA5NiwxNzUzNz
+eyJoaXN0b3J5IjpbOTIyNzA5NjgzLDUzMjMyMDA5NiwxNzUzNz
 Q4ODEyLDY0NDUxNDQ1NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4
 LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAzODM1M119
 -->
