--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -69,6 +69,9 @@ localhost:8088로 접근하면 스프링 프레임워크에서 제공하는 Char
 
 > WAR 파일이란 무엇인가?
 
+WAR(Web Application Resource, Web application ARchive)
+
+
 
 
 
@@ -77,9 +80,10 @@ localhost:8088로 접근하면 스프링 프레임워크에서 제공하는 Char
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTc2NDEyOTEsMTY1MTgyODQ2NSwtMT
-QyMDQ5MDY2NSwtMzkyMjk3MTksLTYwMTE2Mjk4Myw3MDk5ODE2
-NjgsLTE5MjY1ODAyMDQsNTMyMzIwMDk2LDE3NTM3NDg4MTIsNj
-Q0NTE0NDU3LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLTEzMTYy
-OTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbLTYyMDc2OTEyMiwtMTExNzY0MTI5MSwxNj
+UxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNjAxMTYy
+OTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAwOTYsMT
+c1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMTUwNjgz
+MDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAwMzgzNT
+NdfQ==
 -->
