books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -70,6 +70,10 @@ localhost:8088로 접근하면 스프링 프레임워크에서 제공하는 Char
 > WAR 파일이란 무엇인가?
 
 WAR(Web Application Resource, Web application ARchive)
+웹 아카이브 파일인 WAR 파일은 자바의 JAR파일과 같은 역할을 한다. 
+주로 웹 어플리케이션을 묶는데 사용하고 WAR안에는 애플리케이션 실행을 위해 컴파일된 모든 클래스뿐만 아니라 제공되어야 하는 모든 프로퍼티 파일과 다른 설정 파일들도 포함된다. 
+
+WAR 파일의 가장 중요한 점은 배포 명세서(web.
 
 
 
@@ -79,7 +83,7 @@ WAR(Web Application Resource, Web application ARchive)
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMxODQ3NzcxMiwtNjIwNzY5MTIyLC0xMT
+eyJoaXN0b3J5IjpbMTMwMzk4MjM1MCwtNjIwNzY5MTIyLC0xMT
 E3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLTM5MjI5
 NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgwMjA0LD
 UzMjMyMDA5NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1NywxMzAxNTIy
