books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -73,7 +73,7 @@ WAR(Web Application Resource, Web application ARchive)
 웹 아카이브 파일인 WAR 파일은 자바의 JAR파일과 같은 역할을 한다. 
 주로 웹 어플리케이션을 묶는데 사용하고 WAR안에는 애플리케이션 실행을 위해 컴파일된 모든 클래스뿐만 아니라 제공되어야 하는 모든 프로퍼티 파일과 다른 설정 파일들도 포함된다. 
 
-WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것이다. 배포명세서는 애플리케이션 서버(서블릿 컨테이너)에서 애플리케이션을 어떠헥 배포하고 제공할건지 제공한다. 
+WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것이다. 배포명세서는 애플리케이션 서버(서블릿 컨테이너)에서 애플리케이션을 어떻게 배포하고 제공할건지 제공한다. 
 
 
 
@@ -83,10 +83,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNz
-Y0MTI5MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcx
-OSwtNjAxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1Mz
-IzMjAwOTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYx
-NSwtMTUwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLT
-ExNjAwMzgzNTNdfQ==
+eyJoaXN0b3J5IjpbMTM3NzU2Njg3NSw0NDkxNjk5OSwtNjIwNz
+Y5MTIyLC0xMTE3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2
+NjUsLTM5MjI5NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOT
+I2NTgwMjA0LDUzMjMyMDA5NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1
+NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLT
+g1MDM2MzY3OSwtMTE2MDAzODM1M119
 -->
