books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -76,7 +76,8 @@ WAR(Web Application Resource, Web application ARchive)
 WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것이다. 배포명세서는 애플리케이션 서버(서블릿 컨테이너)에서 애플리케이션을 어떻게 배포하고 제공할건지 정의한다. 
 
 >톰캣은 웹 어플리케이션을 어떻게 관리하는가?
-톰캣은 한번에 
+
+톰캣은 한번에 여러 개의 웹어플애플리케이션을 실행할 수 있도록 설계되었다. 웹 애플리케이션은 배포명세서를 가진 WAR파일로 정정의가 된다. 대개 서버는 하나의 톰캣 인스턴스를 실행한다. 
 
 
 
@@ -86,10 +87,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQwOTMzMDUyLDQ0OTE2OTk5LC02MjA3Nj
-kxMjIsLTExMTc2NDEyOTEsMTY1MTgyODQ2NSwtMTQyMDQ5MDY2
-NSwtMzkyMjk3MTksLTYwMTE2Mjk4Myw3MDk5ODE2NjgsLTE5Mj
-Y1ODAyMDQsNTMyMzIwMDk2LDE3NTM3NDg4MTIsNjQ0NTE0NDU3
-LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLTEzMTYyOTEyNSwtOD
-UwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbMTYzMzY1MDM3Myw0NDkxNjk5OSwtNjIwNz
+Y5MTIyLC0xMTE3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2
+NjUsLTM5MjI5NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOT
+I2NTgwMjA0LDUzMjMyMDA5NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1
+NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLT
+g1MDM2MzY3OSwtMTE2MDAzODM1M119
 -->
