--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -77,7 +77,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 >톰캣은 웹 어플리케이션을 어떻게 관리하는가?
 
-톰캣은 한번에 여러 개의 웹어플애플리케이션을 실행할 수 있도록 설계되었다. 웹 애플리케이션은 배포명세서를 가진 WAR파일로 정정의가 된다. 대개 서버는 하나의 톰캣 인스턴스를 실행한다. 
+톰캣은 한번에 여러 개의 웹어플애플리케이션을 실행할 수 있도록 설계되었다. 웹 애플리케이션은 배포명세서를 가진 WAR파일로 정정의가 된다. 대개 서버는 하나의 톰캣 인스턴스를 실행한다. WAR 파일이 톰캣 인스턴스의 webapps 디렉터리에 설치된다. 
+
+> 톰캣의 구성 요소들 
+> 톰캣은 몇 가지 구성요소로 이루어져 있는데, 그 중 하나가 서블릿 컨테이너와 JSP를 처리하는 것이다. 서블릿 컨테이너 구성 요소는 카타리나고하며 구성
 
 
 
@@ -87,10 +90,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYzMzY1MDM3Myw0NDkxNjk5OSwtNjIwNz
-Y5MTIyLC0xMTE3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2
-NjUsLTM5MjI5NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOT
-I2NTgwMjA0LDUzMjMyMDA5NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1
-NywxMzAxNTIyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLT
-g1MDM2MzY3OSwtMTE2MDAzODM1M119
+eyJoaXN0b3J5IjpbMjI4NDExODUsNDQ5MTY5OTksLTYyMDc2OT
+EyMiwtMTExNzY0MTI5MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1
+LC0zOTIyOTcxOSwtNjAxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNj
+U4MDIwNCw1MzIzMjAwOTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcs
+MTMwMTUyMjYxNSwtMTUwNjgzMDY5OCwtMTMxNjI5MTI1LC04NT
+AzNjM2NzksLTExNjAwMzgzNTNdfQ==
 -->
