books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -79,8 +79,9 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 톰캣은 한번에 여러 개의 웹어플애플리케이션을 실행할 수 있도록 설계되었다. 웹 애플리케이션은 배포명세서를 가진 WAR파일로 정정의가 된다. 대개 서버는 하나의 톰캣 인스턴스를 실행한다. WAR 파일이 톰캣 인스턴스의 webapps 디렉터리에 설치된다. 
 
-> 톰캣의 구성 요소들 
-> 톰캣은 몇 가지 구성요소로 이루어져 있는데, 그 중 하나가 서블릿 컨테이너와 JSP를 처리하는 것이다. 서블릿 컨테이너 구성 요소는 카타리나고하며 구성요소는 재스퍼라고 한다. 
+> 톰캣의 구성 요소(component) 
+
+톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 
 
 
 
@@ -90,10 +91,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzUzNzk1MTc5LDQ0OTE2OTk5LC02MjA3Nj
-kxMjIsLTExMTc2NDEyOTEsMTY1MTgyODQ2NSwtMTQyMDQ5MDY2
-NSwtMzkyMjk3MTksLTYwMTE2Mjk4Myw3MDk5ODE2NjgsLTE5Mj
-Y1ODAyMDQsNTMyMzIwMDk2LDE3NTM3NDg4MTIsNjQ0NTE0NDU3
-LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLTEzMTYyOTEyNSwtOD
-UwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbLTIxMTQzODg1OTMsNzUzNzk1MTc5LDQ0OT
+E2OTk5LC02MjA3NjkxMjIsLTExMTc2NDEyOTEsMTY1MTgyODQ2
+NSwtMTQyMDQ5MDY2NSwtMzkyMjk3MTksLTYwMTE2Mjk4Myw3MD
+k5ODE2NjgsLTE5MjY1ODAyMDQsNTMyMzIwMDk2LDE3NTM3NDg4
+MTIsNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLT
+EzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
 -->
