books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -83,6 +83,8 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 
 
+기본으로 실행 중인 톰캣 인스턴스는 weba 
+
 
 
 
@@ -91,10 +93,11 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTQzODg1OTMsNzUzNzk1MTc5LDQ0OT
-E2OTk5LC02MjA3NjkxMjIsLTExMTc2NDEyOTEsMTY1MTgyODQ2
-NSwtMTQyMDQ5MDY2NSwtMzkyMjk3MTksLTYwMTE2Mjk4Myw3MD
-k5ODE2NjgsLTE5MjY1ODAyMDQsNTMyMzIwMDk2LDE3NTM3NDg4
-MTIsNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLTE1MDY4MzA2OTgsLT
-EzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYwMDM4MzUzXX0=
+eyJoaXN0b3J5IjpbMTY0ODkyODM2OSwtMjExNDM4ODU5Myw3NT
+M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
+MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
+AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
+OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
+UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
+MzgzNTNdfQ==
 -->
