--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -83,7 +83,7 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 
 
-기본으로 실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 그 파일은 Bo
+기본으로 실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 그 파일은 BookingApplication 디렉터리에 압축을 푼다. 탐캣은 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행하고 /BookingApplication 경로를 통해 클라이언트에 제공한다.
 
 
 
@@ -93,11 +93,11 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzMzkxMjM1MCwtMjExNDM4ODU5Myw3NT
-M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
-MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
-AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
-OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
-UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
-MzgzNTNdfQ==
+eyJoaXN0b3J5IjpbLTE0MDAwNTY1MTcsLTIxMTQzODg1OTMsNz
+UzNzk1MTc5LDQ0OTE2OTk5LC02MjA3NjkxMjIsLTExMTc2NDEy
+OTEsMTY1MTgyODQ2NSwtMTQyMDQ5MDY2NSwtMzkyMjk3MTksLT
+YwMTE2Mjk4Myw3MDk5ODE2NjgsLTE5MjY1ODAyMDQsNTMyMzIw
+MDk2LDE3NTM3NDg4MTIsNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLT
+E1MDY4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYw
+MDM4MzUzXX0=
 -->
